Bug fix for overflow on mobile deices

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -59,9 +59,12 @@
   .bottom {
     transform: translate(70%, 55%);
   }
-
-  #root {
+  html,
+  body {
     overflow: hidden;
+  }
+  body {
+    position: relative;
   }
 }
 
