--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -733,8 +733,13 @@ video {
     transform: translate(70%, 55%);
   }
 
-  #root {
+  html,
+  body {
     overflow: hidden;
+  }
+
+  body {
+    position: relative;
   }
 }
 
